# improved-octo-chainsaw

./: .pre-commit-config.yaml  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
resources/: confidence.yml
resources/wlc/: README.md  checksums.txt  sample_genesis-001.jsonl
samples/: README.md
scripts/: verify_wlc.py
specs/001-hebrew-audio-align/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hebrew-audio-align/checklists/: requirements.md
specs/001-hebrew-audio-align/contracts/: batch.md  process.md  review.md
src/hb_align/: __init__.py  __main__.py
src/hb_align/aligner/: __init__.py  mfa_runner.py  pipeline.py  validators.py
src/hb_align/audio/: __init__.py  chunker.py
src/hb_align/batch/: __init__.py
src/hb_align/cli/: __init__.py  app.py  batch.py  process.py  review.py
src/hb_align/review/: __init__.py
src/hb_align/text/: __init__.py  transliterator.py  wlc_loader.py
src/hb_align/utils/: __init__.py  cache.py  config.py  logging.py
tests/contract/: test_process_cli.py
tests/contract/data/: README.md
tests/integration/: test_alignment_pipeline.py
tests/unit/: test_chunker.py
tests/unit/aligner/: test_mfa_runner.py  test_validators.py
tests/unit/text/: test_transliterator.py  test_wlc_loader.py
tests/unit/utils/: test_cache.py  test_logging.py
