[tool.poetry]
name = "hb-align"
version = "0.1.0"
description = "CLI for aligning Hebrew Bible audio to the Westminster Leningrad Codex"
authors = ["Improved Octo Chainsaw Team <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "hb_align", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { version = "^0.12.3", extras = ["all"] }
rich = "^13.7.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
click = ">=8.1,<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
mypy = "^1.11.2"
ruff = "^0.6.9"
black = "^24.8.0"
types-pyyaml = "^6.0.12.20240808"

[tool.poetry.scripts]
hb-align = "hb_align.cli.app:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
fix = true
src = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true
mypy_path = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
